# processmon

./: .gitignore  Cargo.toml  README.md
example/: command.sh  config  process.sh  process1.rb  process1.sh  process2.rb  process2.sh  process3.rb  process3.sh  processmon.toml  trigger.sh
example/code/: code.txt
example/code/tmp/: tempfile  triggered.txt
example/dependency/: code.txt
src/: change_event.rs  config.rs  main.rs
src/monitor/: event_proxy.rs  ignore.rs  mod.rs  process.rs
