[package]
name = "processmon"
version = "0.3.2"
authors = ["Thijs Cadier <thijs@appsignal.com>"]
license = "MIT"
description = "Process monitor that can run trigger scripts and subsequently restarts the process when files on specified paths are modified."
homepage = "https://github.com/appsignal/processmon"
edition = "2018"

[dependencies]
anyhow = "^1.0"
notify = "^4.0"
serde = {version = "^1.0", features = ["derive"]}
toml = "^0.5"
colored = "^2.0"
